Update deployment.html footer to exactly match index.html footer styling

--- a/public/deployment.html
+++ b/public/deployment.html
@@ -307,53 +307,74 @@
         }
 
         footer {
-            background-color: var(--secondary-dark);
+            background-color: var(--dark);
             color: white;
-            padding: 2rem 0;
-            text-align: center;
+            padding: 4rem 0 2rem;
         }
 
-        footer p {
-            font-size: 0.875rem;
-        }
-
-        /* Additional footer styles to match index.html */
-        .footer-columns {
+        .footer-content {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            margin-bottom: 2rem;
+            gap: 3rem;
+            margin-bottom: 3rem;
         }
 
         .footer-column h3 {
+            font-size: 1.25rem;
+            margin-bottom: 1.5rem;
             color: white;
-            margin-bottom: 1rem;
-            font-size: 1.1rem;
         }
 
         .footer-column ul {
             list-style: none;
-            margin-left: 0;
         }
 
-        .footer-column li {
-            margin-bottom: 0.5rem;
+        .footer-column ul li {
+            margin-bottom: 0.75rem;
         }
 
         .footer-column a {
-            color: var(--border-light);
+            color: #ccc;
             text-decoration: none;
             transition: var(--transition);
         }
 
         .footer-column a:hover {
-            color: white;
-            text-decoration: underline;
+            color: var(--primary-light);
         }
 
         .footer-column p {
-            color: var(--border-light);
+            color: #ccc;
             margin-bottom: 1rem;
+        }
+
+        .footer-bottom {
+            text-align: center;
+            padding-top: 2rem;
+            border-top: 1px solid #333;
+            color: #888;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .footer-bottom p {
+            margin-bottom: 0;
+        }
+
+        .social-links {
+            display: flex;
+            gap: 1rem;
+        }
+
+        .social-icon {
+            transition: var(--transition);
+            opacity: 0.8;
+        }
+
+        .social-icon:hover {
+            opacity: 1;
+            transform: translateY(-2px);
         }
 
         .btn {
@@ -369,29 +390,6 @@
 
         .btn:hover {
             background-color: var(--primary-light);
-            transform: translateY(-2px);
-        }
-
-        .footer-bottom {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding-top: 1.5rem;
-            border-top: 1px solid var(--secondary-light);
-        }
-
-        .social-links {
-            display: flex;
-            gap: 1rem;
-        }
-
-        .social-icon {
-            transition: var(--transition);
-            opacity: 0.8;
-        }
-
-        .social-icon:hover {
-            opacity: 1;
             transform: translateY(-2px);
         }
 
@@ -640,24 +638,25 @@
         </section>
     </main>
 
-    <footer>
+    <footer role="contentinfo">
         <div class="container">
-            <div class="footer-columns">
+            <div class="footer-content">
                 <div class="footer-column">
-                    <h3>Resources</h3>
+                    <h3>Payload CMS 3.0 Resources</h3>
                     <ul>
-                        <li><a href="https://github.com/Matmax-Worldwide/payloadcmsmcp" target="_blank">GitHub Repository</a></li>
-                        <li><a href="https://www.npmjs.com/package/payload-cms-mcp" target="_blank">NPM Package</a></li>
-                        <li><a href="https://railway.com" target="_blank">Railway Platform</a></li>
+                        <li><a href="https://github.com/Matmax-Worldwide/payloadcmsmcp" target="_blank" rel="noopener noreferrer">GitHub Repository</a></li>
+                        <li><a href="https://payloadcms.com/docs" target="_blank" rel="noopener noreferrer">Payload CMS 3.0 Docs</a></li>
+                        <li><a href="https://github.com/payloadcms/payload" target="_blank" rel="noopener noreferrer">Payload CMS GitHub</a></li>
+                        <li><a href="https://discord.com/invite/payload" target="_blank" rel="noopener noreferrer">Payload CMS Discord</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="/">Home</a></li>
                         <li><a href="/#features">Features</a></li>
                         <li><a href="/#tools">Payload CMS 3.0 Capabilities</a></li>
                         <li><a href="/#setup">Getting Started</a></li>
+                        <li><a href="/#api">AI Integration</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -682,6 +681,28 @@
             </div>
         </div>
     </footer>
+
+    <!-- Structured data for Organization -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "MATMAX WORLDWIDE",
+      "url": "https://matmax.world",
+      "logo": "https://www.payloadcmsmcp.info/00Matmax-world-logo-_1_-svg.png",
+      "sameAs": [
+        "https://github.com/Matmax-Worldwide",
+        "https://instagram.com/matmaxyoga",
+        "https://www.linkedin.com/company/the-wellness-brand"
+      ],
+      "subOrganization": {
+        "@type": "Organization",
+        "name": "Payload CMS MCP Server",
+        "url": "https://www.payloadcmsmcp.info/",
+        "logo": "https://www.payloadcmsmcp.info/00Matmax-world-logo-_1_-svg.png"
+      }
+    }
+    </script>
 
     <!-- Add the same scripts as in index.html -->
     <script>
