--- a/public/deployment.html
+++ b/public/deployment.html
@@ -401,12 +401,32 @@
             cursor: pointer;
             padding: 0.5rem;
             z-index: 1001;
+            position: absolute;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 44px;
+            height: 44px;
+            border-radius: 50%;
+            transition: all 0.3s ease;
+            background-color: transparent;
+            box-shadow: none;
         }
 
+        .mobile-nav-toggle:hover {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+
+        .mobile-nav-toggle:active {
+            transform: translateY(-50%) scale(0.95);
+        }
+
+        /* Classic hamburger icon */
         .hamburger-icon {
             width: 24px;
             height: 18px;
             position: relative;
+            margin: 0 auto;
             transform: rotate(0deg);
             transition: .5s ease-in-out;
         }
@@ -417,7 +437,7 @@
             height: 2px;
             width: 100%;
             background: white;
-            border-radius: 2px;
+            border-radius: 4px;
             opacity: 1;
             left: 0;
             transform: rotate(0deg);
@@ -426,6 +446,9 @@
 
         .hamburger-icon span:nth-child(1) {
             top: 0px;
+            width: 80%;
+            right: 0;
+            left: auto;
         }
 
         .hamburger-icon span:nth-child(2) {
@@ -434,11 +457,16 @@
 
         .hamburger-icon span:nth-child(3) {
             top: 16px;
+            width: 80%;
+            right: 0;
+            left: auto;
         }
 
         .mobile-nav-toggle.active .hamburger-icon span:nth-child(1) {
             top: 8px;
             transform: rotate(135deg);
+            width: 100%;
+            left: 0;
         }
 
         .mobile-nav-toggle.active .hamburger-icon span:nth-child(2) {
@@ -449,6 +477,8 @@
         .mobile-nav-toggle.active .hamburger-icon span:nth-child(3) {
             top: 8px;
             transform: rotate(-135deg);
+            width: 100%;
+            left: 0;
         }
 
         .overlay {
@@ -457,16 +487,19 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
+            background-color: rgba(0, 0, 0, 0.5);
             z-index: 99;
+            backdrop-filter: blur(2px);
+            transition: opacity 0.3s ease;
             opacity: 0;
             visibility: hidden;
-            transition: all 0.3s ease;
+            display: none;
         }
 
         .overlay.active {
             opacity: 1;
             visibility: visible;
+            display: block;
         }
 
         .github-link {
@@ -497,8 +530,7 @@
             }
             
             .header-content {
-                flex-direction: column;
-                gap: 1rem;
+                padding: 0.5rem 0;
             }
             
             nav ul {
@@ -512,10 +544,10 @@
             }
 
             .mobile-nav-toggle {
-                display: block;
-                position: absolute;
-                right: 1rem;
-                top: 1.5rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
             }
 
             nav {
@@ -525,12 +557,14 @@
                 width: 80%;
                 max-width: 300px;
                 height: 100vh;
-                background-color: var(--secondary-dark);
-                padding: 6rem 2rem 2rem;
-                z-index: 1000;
-                transition: right 0.3s ease;
-                box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
+                background: linear-gradient(135deg, var(--primary) 0%, var(--primary-light) 100%);
+                padding: 5rem 2rem 2rem;
+                transition: right 0.4s cubic-bezier(0.77, 0, 0.175, 1);
+                z-index: 999;
+                box-shadow: -5px 0 25px rgba(0, 0, 0, 0.3);
                 overflow-y: auto;
+                border-left: none;
+                border-radius: 0 0 0 20px;
             }
 
             nav.active {
@@ -540,11 +574,88 @@
             nav ul {
                 flex-direction: column;
                 gap: 1.5rem;
+                align-items: flex-start;
+            }
+
+            nav a {
+                display: block;
+                padding: 0.5rem 0;
+                font-size: 1.1rem;
+                width: 100%;
+                color: white;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+                padding-bottom: 0.8rem;
+            }
+
+            nav a:hover {
+                color: white;
+                opacity: 0.8;
+            }
+
+            nav a::after {
+                bottom: 0;
+                background-color: white;
             }
 
             .header-content {
                 flex-direction: row;
                 justify-content: space-between;
+            }
+        }
+
+        /* Additional Responsive Breakpoints */
+        @media (max-width: 480px) {
+            .container {
+                padding: 0 1rem;
+            }
+
+            .logo {
+                font-size: 1rem;
+                gap: 0.4rem;
+                align-items: center;
+            }
+
+            .logo-icon {
+                width: 28px;
+                height: 28px;
+                font-size: 0.9rem;
+            }
+
+            .logo-image {
+                width: 45px;
+                height: 45px;
+                padding: 3px;
+                margin-right: 0;
+            }
+
+            .logo span {
+                font-size: 0.85rem;
+            }
+
+            .logo-text {
+                max-width: none;
+                line-height: 1.1;
+                font-size: 0.85rem;
+            }
+
+            .mobile-nav-toggle {
+                width: 36px;
+                height: 36px;
+                right: 0.5rem;
+            }
+
+            .mobile-nav-toggle span {
+                width: 22px;
+                height: 2px;
+            }
+
+            header {
+                padding: 0.8rem 0;
+            }
+
+            nav {
+                width: 85%;
+                padding: 4.5rem 1.5rem 1.5rem;
             }
         }
     </style>
