--- a/public/deployment.html
+++ b/public/deployment.html
@@ -353,13 +353,10 @@
             padding-top: 2rem;
             border-top: 1px solid #333;
             color: #888;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
         }
 
         .footer-bottom p {
-            margin-bottom: 0;
+            margin-bottom: 1rem;
         }
 
         .social-links {
@@ -541,6 +538,11 @@
                 flex-direction: column;
                 gap: 1rem;
                 text-align: center;
+            }
+
+            .footer-content {
+                grid-template-columns: 1fr;
+                gap: 2rem;
             }
 
             .mobile-nav-toggle {
@@ -764,10 +766,10 @@
                 <div class="footer-column">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="/#features">Features</a></li>
-                        <li><a href="/#tools">Payload CMS 3.0 Capabilities</a></li>
-                        <li><a href="/#setup">Getting Started</a></li>
-                        <li><a href="/#api">AI Integration</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#tools">Payload CMS 3.0 Capabilities</a></li>
+                        <li><a href="#setup">Getting Started</a></li>
+                        <li><a href="#api">AI Integration</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
