--- a/public/deployment.html
+++ b/public/deployment.html
@@ -365,17 +365,37 @@
 
         .social-links {
             display: flex;
-            gap: 1rem;
+            justify-content: center;
+            gap: 1.5rem;
+            margin-top: 1rem;
         }
 
-        .social-icon {
+        .social-links a {
+            color: #ccc;
+            font-size: 1.25rem;
             transition: var(--transition);
-            opacity: 0.8;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: rgba(255, 255, 255, 0.1);
         }
 
-        .social-icon:hover {
-            opacity: 1;
-            transform: translateY(-2px);
+        .social-links a:hover {
+            color: var(--primary-light);
+            background-color: rgba(255, 255, 255, 0.2);
+            transform: translateY(-3px);
+        }
+        
+        .social-icon {
+            filter: invert(0.8);
+            transition: var(--transition);
+        }
+        
+        .social-links a:hover .social-icon {
+            filter: invert(0.5) sepia(1) saturate(5) hue-rotate(175deg);
         }
 
         .btn {
