--- a/public/deployment.html
+++ b/public/deployment.html
@@ -400,13 +400,14 @@
 
         .btn {
             display: inline-block;
+            padding: 0.75rem 1.5rem;
+            border-radius: var(--radius);
+            font-weight: 600;
+            text-decoration: none;
+            transition: var(--transition);
+            cursor: pointer;
             background-color: var(--primary);
             color: white;
-            padding: 0.5rem 1rem;
-            border-radius: var(--radius);
-            text-decoration: none;
-            font-weight: 500;
-            transition: var(--transition);
         }
 
         .btn:hover {
