Update .btn styling in deployment.html to match index.html

--- a/public/deployment.html
+++ b/public/deployment.html
@@ -406,13 +406,19 @@
             text-decoration: none;
             transition: var(--transition);
             cursor: pointer;
-            background-color: var(--primary);
-            color: white;
         }
 
         .btn:hover {
-            background-color: var(--primary-light);
             transform: translateY(-2px);
+        }
+        
+        .footer-column .btn {
+            background-color: var(--primary);
+            color: white;
+        }
+        
+        .footer-column .btn:hover {
+            background-color: var(--primary-light);
         }
 
         /* Mobile navigation styles */
